[tool.poetry]
name = "string-calculator-kata"
version = "0.1.0"
description = ""
authors = ["Billie Thompson <lee.sutcliffe@armakuni.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mutmut = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"